# EnclaveOS

./: .gitignore  Dockerfile  Makefile  README.md  TODO  config.env
config/: global.env
config/aws/: linux.config  rootfs.list
config/generic/: linux.config  rootfs.list
config/local/: rootfs.list
config/toolchain/: Makefile  package-hashes-x86_64.txt  packages-base.list  packages-x86_64.list  sources.list
keys/: 647F28654894E3BD457199BE38DBBDC86092693E.asc
make/: extract.mk  fetch.mk  keys.mk  toolchain.mk
scripts/: busybox_init
src/aws/: Cargo.toml
src/aws/src/: lib.rs
src/init/: Cargo.toml  init.c  init.rs
src/init/src/: aws.rs  dmesg.rs  error.rs  main.rs  sys.rs  system.rs
src/scripts/: busybox_init
src/system/: Cargo.toml
src/system/src/: lib.rs
src/toolchain/: Dockerfile
src/toolchain/scripts/: packages-install  packages-update
targets/local/: busybox.config  linux.config
toolchain/: Dockerfile  Makefile
toolchain/config/: package-hashes-x86_64.txt  packages-base.list  packages-x86_64.list
toolchain/scripts/: packages-install  packages-update
